# raylib-rs

./: .gitmodules
raylib/: Cargo.toml
raylib-sys/: Cargo.toml  bindings_linux.rs  bindings_osx.rs  build.rs  raylib.h  rgui_wrapper.h  rlgl.h
raylib/src/core/: audio.rs  color.rs  input.rs  mod.rs  text.rs  texture.rs  window.rs
showcase/src/example/models/: models_material_pbr.rs
showcase/src/example/textures/: textures_mouse_painting.rs
