[package]
name = "raylib"
version = "3.0.0"
authors = ["DeltaPHC <phclem@protonmail.com>"]
license = "Zlib"
readme = "../README.md"
description = "Safe Rust bindings for Raylib."
documentation = "https://docs.rs/raylib"
repository = "https://github.com/deltaphc/raylib-rs"
keywords = ["bindings", "raylib", "gamedev"]
categories = ["api-bindings", "game-engines", "graphics"]
edition = "2018"

[dependencies]
raylib-sys = { version = "3.0", path = "../raylib-sys" }
libc = "0.2.45"
lazy_static = "1.2.0"

[features]
nightly = []
nobuild = ["raylib-sys/nobuild"]
support_busy_wait_loop = ["raylib-sys/support_busy_wait_loop"]
support_high_dpi = ["raylib-sys/support_high_dpi"]
platform_drm = ["raylib-sys/platform_drm"]

[package.metadata.docs.rs]
features = [ "nobuild" ]